added Blook chat functionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       gtag('config', 'G-CXKZ4R2GGR');
     </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CXKZ4R2GGR"></script>
+    <script>window.bloomSettings={userId:"r2gdry2w87qo8",profileId:"r2gdrloe8dqo8"};</script><script>if(void 0===bloomScript){var bloomScript=document.createElement("script");bloomScript.async=!0,fetch("https://code.bloom.io/version?t="+Date.now()).then(function(t){return t.text()}).then(function(t){bloomScript.src="https://code.bloom.io/widget.js?v="+t,document.head.appendChild(bloomScript)})}</script>
   </head>
 
   <body>
